[首页]的基础结构完毕.问题: 小程序大小超过2048kb待解决

--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -2,14 +2,11 @@ page {
   width: 750rpx;
   background-image: url(https://gitee.com/jilinJL/my-pictures/raw/master/img/202302131016767.png);
 }
-
 .index {
   display: flex;
   flex-direction: column;
   height: 100vh;
-
-  //设置headerbox位置
-  .headerbox{
-    margin-top: 40rpx;
-  }
+}
+.index .headerbox {
+  margin-top: 40rpx;
 }
