--- a/src/pages/index/indexswiper/index.css
+++ b/src/pages/index/indexswiper/index.css
@@ -1,10 +1,12 @@
 .swiperView {
-  height: 450px;
+  height: 480px;
+  width: 100%;
 }
 .swiperView .indexswiper {
   width: 100%;
-  height: 450px;
+  height: 100%;
 }
 .swiperView .indexswiper SwiperItem {
-  height: 450px;
+  height: 100%;
+  width: 100%;
 }
