--- a/src/pages/index/indexswiper/index.less
+++ b/src/pages/index/indexswiper/index.less
@@ -1,13 +1,13 @@
 // 整个容器
 .swiperView {
-    height: 450px;
+    height: 480px;
+    width: 100%;
   .indexswiper {
     width: 100%;
-    height: 450px;
-
+    height: 100%;
     SwiperItem {
-        height: 450px;
-
+        height: 100%;
+        width: 100%;
     }
   }
 }
