--- a/src/pages/shop/goodslist/index.css
+++ b/src/pages/shop/goodslist/index.css
@@ -1,5 +1,5 @@
 .goods-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row-gap: 20px;
+  column-count: 2;
+  column-gap: 4rpx;
+  margin-bottom: 100rpx;
 }
