--- a/src/pages/shop/goodslist/index.less
+++ b/src/pages/shop/goodslist/index.less
@@ -1,5 +1,10 @@
 .goods-list{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 20px;
+    // display: flex;
+    // grid-template-columns: 1fr 1fr;
+    // grid-row-gap: auto;
+    // flex-direction: column;
+
+    column-count: 2;
+    column-gap: 4rpx;
+    margin-bottom: 100rpx;
 }
