22号准备做好登陆和购物车,然后是订单

--- a/src/pages/shop/gooditem/index.css
+++ b/src/pages/shop/gooditem/index.css
@@ -24,3 +24,8 @@
   display: flex;
   justify-content: space-between;
 }
+.good-item .price .at-icon-shopping-cart {
+  padding: 10rpx;
+  background-color: #6098e283;
+  border-radius: 10%;
+}
