--- a/src/pages/shop/gooditem/index.less
+++ b/src/pages/shop/gooditem/index.less
@@ -29,5 +29,13 @@
     .price{
         display: flex;
         justify-content: space-between;
+
+        .at-icon-shopping-cart{
+            padding: 10rpx;
+            background-color: #6098e283;
+            border-radius: 10%;
+        }
     }
+
+    
 }
