--- a/src/pages/shop/index.less
+++ b/src/pages/shop/index.less
@@ -1,11 +1,14 @@
-.index{
-    background-color: rgba(224, 223, 224, 0.76);
-
-
-    //购物车固定
-    .shop-cart{
-        position: fixed;
-        bottom: 0;
-        
+page{
+    background-color: rgba(224, 223, 224);
+    .index{
+        background-color: rgba(224, 223, 224, 0.76);
+    
+    
+        //购物车固定
+        .shop-cart{
+            position: fixed;
+            bottom: 0;
+            
+        }
     }
 }
